--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -11,12 +11,13 @@ results, questions, interpreations, notes, etc.
 date()
 ```
 
-```{r libs, eval = TRUE, echo = FALSE, results = "hide", warning = FALSE, error = FALSE}
+```{r libs, eval = TRUE, echo = TRUE, results = "hide", warning = FALSE, error = FALSE, message = FALSE}
 options(repos='http://cran.rstudio.com/')
 library("ggplot2")
 library("reshape2")
 library("plyr")
-library("ITHIM")
+library("devtools")
+install_github("syounkin/ITHIM")
 ```
 
 ## R Implementation
